Update roadmap section in index.html

--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@ Prepare to immerse yourself in a living realm where myths awaken, legends take s
     <style class="u-overlap-style">.u-overlap:not(.u-sticky-scroll) .u-header {
 background-color: #000000 !important
 }</style>
-    //roadmap
-    <section style="background-color: #111; color: #eee; padding: 60px 20px; font-family: Arial, sans-serif;">
+    <!-- roadmap -->
+<section style="background-color: #111; color: #eee; padding: 60px 20px; font-family: Arial, sans-serif;">
   <h2 style="text-align: center; font-size: 2em; margin-bottom: 40px;">📜 Wildgard - Roadmap de Desenvolvimento</h2>
 
   <div style="max-width: 800px; margin: 0 auto;">
@@ -191,6 +191,7 @@ background-color: #000000 !important
   </div>
 </section>
 
+ <!-- Endroadmap -->
     
     <footer class="u-align-center u-clearfix u-footer u-shading u-footer" id="footer" data-image-width="1920" data-image-height="1920"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/bannerpng.png" alt="" data-image-width="3327" data-image-height="582" data-lang-en="">
