Update body title in index.html to 'Wildgard'

--- a/pt/index.html
+++ b/pt/index.html
@@ -25,7 +25,7 @@
   <link rel="canonical" href="./pt/">
   <meta data-intl-tel-input-cdn-path="intlTelInput/">
 </head>
-<body data-home-page="https://wildgard.nicepage.io/Home.html" data-home-page-title="Home" data-path-to-root="./" class="u-body">
+<body data-home-page="https://wildgard.nicepage.io/Home.html" data-home-page-title="Wildgard" data-path-to-root="./" class="u-body">
 
   <!-- Header (preserve your existing header markup as needed) -->
   <header class="u-header u-clearfix u-header" id="sec-1">
