Update Open Graph title to 'Wildgard'

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		"url": "/"
 }</script>
     <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="Wildgard">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <link rel="canonical" href="/">
