Translate roadmap sections to English

--- a/index.html
+++ b/index.html
@@ -167,34 +167,35 @@ background-color: #000000 !important
 
 	  
 <section style="background-color: black; color: #eee; padding: 60px 20px; font-family: Arial, sans-serif;">
-  <h2 style="text-align: center; font-size: 2em; margin-bottom: 40px;">📜 Wildgard - Roadmap de Desenvolvimento</h2>
+  <h2 style="text-align: center; font-size: 2em; margin-bottom: 40px;">📜 Wildgard - Development Roadmap</h2>
 
   <div style="max-width: 800px; margin: 0 auto;">
     <div style="margin-bottom: 25px;">
-      <h3>⚔️ Fase 1 - Núcleo do Mundo (Concluído ✅)</h3>
-      <p>Implementação do sistema de mundo aberto base, controle de personagem e performance HDRP.</p>
+      <h3>⚔️ Phase 1 - World Core (Completed ✅)</h3>
+      <p>Implementation of the base open world system, character control, and HDRP performance optimization.</p>
       <div style="background: #333; border-radius: 5px;">
         <div style="width: 100%; background: #4caf50; padding: 6px; border-radius: 5px;"></div>
       </div>
     </div>
 
     <div style="margin-bottom: 25px;">
-      <h3>🌲 Fase 2 - Ecossistema e Exploração (Em Progresso ⏳)</h3>
-      <p>Mapas modulares, IA de fauna, ciclo de dia/noite e minimapa interativo.</p>
+      <h3>🌲 Phase 2 - Ecosystem and Exploration (In Progress ⏳)</h3>
+      <p>Modular maps, fauna AI, day/night cycle, and interactive minimap.</p>
       <div style="background: #333; border-radius: 5px;">
         <div style="width: 60%; background: #ff9800; padding: 6px; border-radius: 5px;"></div>
       </div>
     </div>
 
     <div style="margin-bottom: 25px;">
-      <h3>🛡️ Fase 3 - Combate e Progressão (Planejado 🔮)</h3>
-      <p>Sistema de combate completo, loot, e customização de personagens.</p>
+      <h3>🛡️ Phase 3 - Combat and Progression (Planned 🔮)</h3>
+      <p>Complete combat system, loot, and character customization.</p>
       <div style="background: #333; border-radius: 5px;">
         <div style="width: 15%; background: #9c27b0; padding: 6px; border-radius: 5px;"></div>
       </div>
     </div>
   </div>
 </section>
+
 
  
 
