Add links and resources section to index.html
Added a new section for links and resources with styled buttons.

--- a/index.html
+++ b/index.html
@@ -196,6 +196,26 @@ background-color: #000000 !important
   </div>
 </section>
 
+<section style="background-color: black; color: #eee; padding: 60px 20px; text-align: center; font-family: Arial, sans-serif;">
+  <h2 style="margin-bottom: 40px;">🌐 Links & Resources</h2>
+  
+  <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
+    <a href="https://ud.me/0xkaldtl.nft" target="_blank" 
+       style="background-color: #007bff; color: white; padding: 15px 30px; text-decoration: none; border-radius: 8px; font-weight: bold;">
+       Developer
+    </a>
+    
+    <a href="https://ud.me/wildgard.kingdom" target="_blank" 
+       style="background-color: #007bff; color: white; padding: 15px 30px; text-decoration: none; border-radius: 8px; font-weight: bold;">
+       Game Profile
+    </a>
+    
+    <a href="https://ud.me/forgegate.hub" target="_blank" 
+       style="background-color: #007bff; color: white; padding: 15px 30px; text-decoration: none; border-radius: 8px; font-weight: bold;">
+       Forge Gate Hub
+    </a>
+  </div>
+</section>
 
  
 
