Change section header from 'Links & Resources' to 'UD profiles'

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ background-color: #000000 !important
 </section>
 
 <section style="background-color: black; color: #eee; padding: 60px 20px; text-align: center; font-family: Arial, sans-serif;">
-  <h2 style="margin-bottom: 40px;">🌐 Links & Resources</h2>
+  <h2 style="margin-bottom: 40px;">🌐 UD profiles</h2>
   
   <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap;">
     <a href="https://ud.me/0xkaldtl.nft" target="_blank" 
