Embed Wildgard - Skjaldmaer game in index.html
Added an iframe to embed a game from itch.io.

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@ background-color: #000000 !important
   </div>
 </section>
 
- 
+ <iframe frameborder="0" src="https://itch.io/embed/998433?linkback=true&amp;border_width=2&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=e5a13f&amp;border_color=c9cc80" width="554" height="169"><a href="https://forge-gate.itch.io/wilgard-skjaldmaer">Wildgard - Skjaldmaer by Forge Gate</a></iframe>
 
 
  <div style="background-color: black; display: flex; justify-content: center; align-items: center; padding: 20px;">
