--- a/index.html
+++ b/index.html
@@ -217,7 +217,13 @@ background-color: #000000 !important
   </div>
 </section>
 
- <iframe frameborder="0" src="https://itch.io/embed/998433?linkback=true&amp;border_width=2&amp;bg_color=000000&amp;fg_color=ffffff&amp;link_color=e5a13f&amp;border_color=c9cc80" width="554" height="169"><a href="https://forge-gate.itch.io/wilgard-skjaldmaer">Wildgard - Skjaldmaer by Forge Gate</a></iframe>
+ <div style="display: flex; justify-content: center; align-items: center; background-color: black; padding: 40px 0;">
+  <iframe frameborder="0" 
+          src="https://itch.io/embed/998433?linkback=true&border_width=2&bg_color=000000&fg_color=ffffff&link_color=e5a13f&border_color=c9cc80" 
+          width="554" height="169">
+    <a href="https://forge-gate.itch.io/wilgard-skjaldmaer">Wildgard - Skjaldmaer by Forge Gate</a>
+  </iframe>
+</div>
 
 
  <div style="background-color: black; display: flex; justify-content: center; align-items: center; padding: 20px;">
